<resources>
    <string name="app_name">Pixagram</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create account</string>
    <string name="application_logo">Application logo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="have_account">Have account</string>
    <string name="username">Username</string>
    <string name="empty_email">Email is empty</string>
    <string name="invalid_username">Username has to be at least %d letters long</string>
    <string name="invalid_password">Password has to be at least %d letters long</string>
    <string name="diff_passwd">Passwords are not the same</string>
    <string name="user_created">User created</string>
    <string name="cannot_save_user_into_db">Something went wrong. User could not be saved into database</string>
    <string name="cannot_create_user">User was not created</string>
    <string name="sign_out">Sign Out</string>
    <string name="wrong_email_or_passwd">Wrong email or password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="liked">Liked</string>
    <string name="add_new_image">Add new image</string>
    <string name="post">Post</string>
    <string name="image_to_post">Image to post</string>
    <string name="description">Description</string>
    <string name="select_image_from_gallery">Select image from gallery</string>
    <string name="make_new_image">Make new image</string>
    <string name="image_from_gallery">Image from gallery</string>
    <string name="image_selected">Image selected</string>
    <string name="post_was_uploaded">Post has been uploaded</string>
    <string name="post_was_not_uploaded">Post was not uploaded. %s</string>
    <string name="post_was_not_uploaded_no_user">Post was not uploaded. User is not logged</string>
    <string name="ok">OK</string>
    <string name="user">User</string>
    <string name="tag">Tag</string>
    <string name="user_avatar">User avatar</string>
    <string name="tag_counter_format">%d posts</string>
    <string name="tag_title_format">#%s</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="loading_dots">…</string>
    <string name="lorem">It is a long #established fact @that a reader will #be distracted by www.netflix.com the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.</string>
    <string name="post_new_photo">Post new photo</string>
    <string name="liked_posts">Liked posts</string>
    <string name="search_new_content">Search new content</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="unfollow">Unfollow</string>
    <string name="fullname">Full name</string>
    <string name="email_already_used">Email is already used</string>
    <string name="username_already_used">Username is already used</string>
    <string name="post_image">Post image</string>
    <string name="liked_counter">Liked counter</string>
    <string name="comments_format">Comments: %s</string>
    <string name="comments">Comments</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="successful_login">Successful login</string>
    <string name="something_went_wrong">Something went wrong. Check Your internet connection</string>
    <string name="no_logged_user">There is not logged user</string>
    <string name="could_not_upload_post">Could not upload post. Check You internet connection</string>
    <string name="dislike">Dislike</string>
    <string name="comments_start">Comments: …</string>
    <string name="comment_posted">Comment posted</string>
    <string name="comment_cannot_be_empty">Comment cannot be empty</string>
    <string name="there_are_not_any_comments_yet">There are not any comments yet</string>
    <string name="write_first_comment">Write first comment</string>
    <string name="comment_icon">Comment icon</string>
    <string name="your_profile">Your profile</string>
    <string name="your_profile_format">Your profile (%s)</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="help">Help</string>
    <string name="find_user">Find user</string>
    <string name="search_by_tags">Search by tags</string>
    <string name="nothing_was_found">Nothing was found</string>
    <string name="icon_nothing_was_found">Icon - nothing was found</string>
    <string name="loading_posts_counter">… posts</string>
    <string name="invalid_username_characters">Username can only contains letters, numbers and underscores</string>
    <string name="nothing_to_show_home">There is not anything to show. To see posts observe new users (or check Your internet connection)</string>
    <string name="feed_icon">Feed icon</string>
    <string name="user_does_not_have_any_posts">User has not uploaded any posts yet</string>
    <string name="report">Report</string>
    <string name="show_hide">Show/Hide content</string>
    <string name="show_description">Show description</string>
    <string name="collapse_description">Collapse description</string>
    <string name="user_not_found_format">User \'%s\' hasn\'t been found</string>
    <string name="could_not_open_browser">Browser couldn\'t  be opened</string>
    <string name="you_are_currently_on_this_profile">You are currently visited this user profile</string>
    <string name="you_are_currently_on_your_profile">You are currently on Your profile</string>
    <string name="not_implemented">This feature has not yet been implemented</string>
    <string name="you_are_currently_on_this_tag">You are currently on this hashtag page</string>
    <string name="try_again">Try again</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="nothing_to_show_user">This user has not upload any post yet</string>
    <string name="mentions">Mentions</string>
    <string name="messages">Messages</string>
    <string name="messages_not_impl">Private messages aren\'t currently available</string>
    <string name="chattyer">Chattyer</string>
    <string name="help_not_impl">Help isn\'t currently available. </string>
    <string name="settings_not_impl">Settings aren\'t currently available</string>
    <string name="edit_profile_not_impl" >Editing profile is not currently available</string>
    <string name="no_uploads_user">This user hasn\'t uploaded any post yet</string>
    <string name="no_mentions_user">This user hasn\'t been mentioned in any post yet</string>
    <string name="no_liked_user">This user has not liked any post yet</string>
    <string name="no_uploads_profile">You haven\'t upload any posts yet. Go to upload section and post some images</string>
    <string name="no_mentions_profile">You haven\'t been mentioned in any post yet</string>
    <string name="no_likes_profile">You haven\'t liked any posts yet. Go to home feed and like some posts</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="bio">Bio</string>
    <string name="change_email">Change email</string>
    <string name="change_passwd">Change password</string>
    <string name="updated_successfully">Information has been updated successfully</string>
    <string name="update_failed">Something went wrong. Information wasn\'t updated</string>
    <string name="new_email">New Email</string>
    <string name="change_email_failed">Failed to change email. %s</string>
    <string name="change_email_success">Email changed successfully</string>
    <string name="passwd_is_wrong">Provided password is wrong</string>
    <string name="current_password">Current</string>
    <string name="new_passwd">New password</string>
    <string name="passwords_are_not_the_same">Passwords are not the same</string>
    <string name="change_passwd_success" >Password changed successfully</string>
    <string name="change_passwd_failed" >Failed to change password. %s</string>
    <string name="take_image_from">Take image from:</string>
    <string name="gallery">Gallery</string>
    <string name="jdentIcon">JdentIcon</string>
    <string name="camera">Camera</string>
    <string name="message_camera_never_ask">To upload photo from camera app needs camera permission.</string>
    <string name="ask_permission_read_storage">To upload photos from gallery You have to allow us to read external storage from Your device</string>
    <string name="allow">Allow</string>
    <string name="message_storage_never_ask">Go to settings and allow us to reading external storage.</string>
    <string name="gallery_empty">You don\'t have any images in gallery that can be uploaded</string>
    <string name="edit_post">Edit post</string>
    <string name="see">See</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
    <string name="there_are_not_any_messages_yet">There aren\'t any messages yet</string>
    <string name="write_first_message">Write first message</string>
    <string name="message_sent">Message sent</string>
    <string name="message_not_sent">Message not sent. Something went wrong</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="copied_message">Copied message</string>
    <string name="no_conversations">You currently don\'t have any conversations. Go to someone\'s profile and send a message.</string>
    <string name="error_load_conversations">Something went wrong. We couldn\'t load Your conversations.</string>
    <string name="followers_not_loaded">Something went wrong, followers weren\'t loaded. Check Your internet connection.</string>
    <string name="report_msg">Report message</string>
    <string name="report_post">Report post</string>
    <string name="report_tip">Write a short message in which You will explain why do You think this post should be deleted.</string>
    <string name="thanks_for_reporting">Thanks for Your report</string>
    <string name="save">Save</string>
    <string name="post_edited">Post has been edited</string>
    <string name="post_not_edited">Post wasn\'t edited. Something went wrong</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="users_that_like_post">Users that like this post</string>
    <string name="empty_users_liking_post">There aren\'t any users that liked this post</string>
    <string name="something_went_wrong_loading_users_that_liked_post">Something went wrong. Users wasn\'t loaded</string>
    <string name="user_have_no_followers">This user doesn\'t follow anyone</string>
    <string name="user_have_no_following">This user is not followed by anyone</string>

    <plurals name="tag_counter_post">
        <item quantity="one"><b>%d</b> post</item>
        <item quantity="other"><b>%d</b> posts</item>
    </plurals>
</resources>