<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.myniprojects.pixagram.vm.LoginViewModel"
            />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_padding_fragment"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/application_logo"
            android:src="@drawable/ic_camera"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            app:startIconDrawable="@drawable/ic_outline_alternate_email_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:visibility="gone"
            app:startIconDrawable="@drawable/ic_baseline_face_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTxtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:text="@={viewModel.username}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayPasswd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_key_24dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTxtPasswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.passwd}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayPasswdConf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:visibility="gone"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_key_24dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTxtPasswdConf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:text="@={viewModel.passwdConf}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/butLogRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:onClick="@{() -> viewModel.logOrRegister()}"
            android:text="@string/log_in"
            />

        <Button
            android:id="@+id/butChangeState"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:onClick="@{() -> viewModel.changeState()}"
            android:text="@string/create_account"
            app:icon="@drawable/ic_outline_person_add_24"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>