<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/huge_margin"
    android:id="@+id/clRoot"
    android:animateLayoutChanges="true"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgAvatar"
        style="@style/ShapeableImageViewAvatar"
        android:layout_width="@dimen/message_avatar_size"
        android:layout_height="@dimen/message_avatar_size"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:contentDescription="@string/user_avatar"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        />

    <com.google.android.material.textview.MaterialTextView
        android:padding="@dimen/micro_margin"
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="17:48"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintStart_toStartOf="@id/cardView"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@id/txtTime"
        app:cardBackgroundColor="@color/color_msg_other"
        app:cardElevation="2dp"
        >

        <TextView
            android:id="@+id/txtBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/loading_dots"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="@string/lorem"
            />


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>