<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <Button
                android:id="@+id/butPost"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:text="@string/post"
                app:icon="@drawable/ic_post_add_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Button
                android:id="@+id/butCancel"
                style="@style/IconButton"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                app:icon="@drawable/ic_round_close_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="@dimen/post_image_height"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:contentDescription="@string/image_to_post"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/butPost"
                tools:srcCompat="@tools:sample/avatars"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtFieldDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edTxtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLength="256"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/select_image_from_gallery"
                android:textAppearance="?attr/textAppearanceOverline"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/butMakeNewImage"
                />

            <Button
                android:id="@+id/butMakeNewImage"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/make_new_image"
                app:icon="@drawable/ic_add_a_photo_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtFieldDesc"
                />

            <View
                style="@style/Divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                />

            <View
                style="@style/Divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView"
                />


            <!--            <View-->
            <!--                style="@style/BottomPlaceHolder"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/txtFieldDesc"-->
            <!--                />-->

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</layout>