<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.myniprojects.pixagram.vm.EditProfileViewModel"
            />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="?attr/actionBarSize"
        >

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/host"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/progressBarUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/big_margin"
                    android:contentDescription="@string/user_avatar"
                    android:padding="@dimen/small_margin"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4"
                    app:srcCompat="@drawable/ic_outline_image_24"
                    style="@style/ShapeableImageViewAvatar"
                    />

                <Button
                    android:id="@+id/butChangeProfilePhoto"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/change_profile_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgAvatar"
                    />

                <Button
                    android:id="@+id/butSave"
                    style="@style/IconButton"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:onClick="@{()->viewModel.save()}"
                    app:icon="@drawable/ic_outline_save_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <Button
                    android:id="@+id/butCancel"
                    style="@style/IconButton"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:onClick="@{()->viewModel.cancel()}"
                    app:icon="@drawable/ic_round_close_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/medium_margin"
                    android:paddingEnd="@dimen/medium_margin"
                    app:layout_constraintTop_toBottomOf="@id/butChangeProfilePhoto"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtLayFullname"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        app:startIconDrawable="@drawable/ic_baseline_face_24"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edTxtFullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fullname"
                            android:inputType="text"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtLayBio"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        app:startIconDrawable="@drawable/ic_outline_auto_stories_24"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edTxtBio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/bio"
                            android:inputType="textMultiLine"
                            android:maxLines="6"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/butChangeEmail"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_email"
                        />

                    <Button
                        android:id="@+id/butChangePasswd"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_passwd"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.core.widget.NestedScrollView>

</layout>